# Job-leads

./: .gitignore  README.md
job-leads/: .env.example  .gitignore  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
job-leads-web/: .env.local  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
job-leads-web/.next/: trace
job-leads-web/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
job-leads-web/.next/server/app/: page.js  page_client-reference-manifest.js
job-leads-web/.next/server/vendor-chunks/: @swc.js  next.js
job-leads-web/.next/static/chunks/: app-pages-internals.js  webpack.js
job-leads-web/.next/types/app/: layout.ts  page.ts
job-leads-web/app/: layout.tsx  page.tsx
job-leads-web/components/: Filters.tsx  JobsTable.tsx  LeadEditor.tsx
job-leads-web/lib/: api.ts  types.ts
job-leads/api/: main.py
job-leads/backend/: llm.py  prompts.py
job-leads/dashboard/: app.py
job-leads/job_agent/: db.py  filters.py  models.py  notify.py  orchestrator.py  repo.py  schema.py  scoring.py  supa.py  utils.py
job-leads/job_agent/adapters/: __init__.py  greenhouse.py  lever.py  remoteok.py  weworkremotely.py
job-leads/scripts/: run_scheduler.py  run_scrape_once.py
job-leads/supabase/migrations/: 001_init.sql  002_network.sql
job-leads/tests/: test_adapters_smoke.py  test_dedupe.py  test_repo_supabase.py  test_scoring.py
net-leads/: README.md
net-leads/apps/web/: .env.local.example  index.html  package-lock.json  package.json  vite.config.ts
(+13 files in other folders)
